Fixed contrast for .tcat

--- a/global.css
+++ b/global.css
@@ -198,7 +198,7 @@ table {
 
 .tcat {
 	background: #002b36;
-	color: #073642;
+	color: #586e75;
 	font-size: 12px;
 }
 
